fix: update hero subheading copy and shift problem sphere left for text clearance

--- a/css/main.css
+++ b/css/main.css
@@ -703,7 +703,7 @@
 .problem-sphere {
   position: absolute;
   top: -180px;
-  left: -175px;
+  left: -320px;
   width: 700px;
   height: 700px;
   border-radius: 50%;
